Fix CheckingTagSelectionTest to use enums